# olio_ohjelmointi

./: .gitignore  README.md  chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
Practice_1/: main.cpp
Practice_2/: CMakeLists.txt  game.cpp  game.h  main.cpp
Practice_3/: CMakeLists.txt  chef.cpp  chef.h  italianchef.cpp
Practice_4/: .gitignore  CMakeLists.txt  asiakas.cpp  asiakas.h  luottotili.cpp  luottotili.h  main.cpp  pankkitili.cpp  pankkitili.h
Practice_4/Practice_1/: CMakeLists.txt  main.cpp
Practice_4/Practice_3/: italianchef.h  main.cpp
Practice_5/: CMakeLists.txt  main.cpp  notifikaattori.cpp  notifikaattori.h  seuraaja.cpp  seuraaja.h
Practice_6/: CMakeLists.txt  main.cpp  student.cpp  student.h
Practice_8/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Tehtava_7_1/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Tehtava_7_2/: mainwindow.cpp  mainwindow.h  mainwindow.ui
TestTest/: CMakeLists.txt  main.cpp
